--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,36 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrapper {
+  height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  margin-top: -100px;
 }
 
-.App-link {
-  color: #61dafb;
+blockquote {
+  max-width: 900px;
+  text-align: justify;
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+  font-family: "Courier New", Courier, monospace;
+  font-size: 1.2em;
+  padding: 30px;
+  line-height: 36px;
+  margin: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.loadingJoke {
+  margin: 80px;
+}
+
+.dropcap {
+  font-size: 36px;
+  font-style: italic;
+}
+
+.next {
+  margin-left: 20px;
 }
